--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ label[for="animationSelect"] {
     </style>
 </head>
 <body>
-    <h1 id="pageTitle">Animation.Anand </h1>
+    <h1 id="pageTitle">Animation.Om </h1>
 
     <label for="animationSelect">Select Animation:</label>
     <select id="animationSelect" onchange="applySelectedAnimation()">
